# advent-of-code

./: README.md  cli.sh
01-trebuchet/rust/src/: main.rs
04-scratchcards/rust/src/: main.rs
05-fertilizer/rust/: Cargo.toml
05-fertilizer/rust/src/: main.rs
2023/: README.md
2023/01-trebuchet/rust/src/: main.rs
2023/02-cube-conundrum/rust/src/: main.rs
2023/03-gear-ratios/rust/src/: main.rs
2023/05-fertilizer/rust/src/: main.rs
2023/06-wait-for-it/rust/src/: main.rs
2023/templates/rust/src/: main.rs
2024/: README.md  create-folder.sh
2024/01-historian-hysteria/: index.mjs
2024/02-red-nosed-reports/: index.mjs  test.mjs
2024/03-mull-it-over/: index.mjs
2024/04-ceres-search/: index.mjs
2024/05-print-queue/: index.mjs
2024/templates/: index.mjs
2025/: .gitignore  README.md  new.sh  pyproject.toml
2025/src/01_secret_entrance/: __init__.py
2025/src/02_gift_shop/: __init__.py
2025/src/template/: __init__.py
2025/src/utils/: __init__.py
templates/rust/: Cargo.toml  main.rs
