[project]
name = "2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Sampaio",email = "mateus4k@protonmail.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "2025", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
